--- a/wit-web.html
+++ b/wit-web.html
@@ -26,13 +26,7 @@
       About Us
     </div>
     <div class= "About">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-      Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-      when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-      It has survived not only five centuries, but also the leap into electronic typesetting, 
-      remaining essentially unchanged. 
-      It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-      and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+      Women in Tech is a computer science club dedicated to the diversity of the technology field.
     </div>
   </div>
   <div class = "board">
@@ -41,14 +35,15 @@
         <img class = "prez" width = "100px" src="user.png">
         <br>Amelia Hernandez
         <div class = "content">
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          President <br>
+
         </div>
       </div> 
       <div class = "vice-pres">
         <img class = "prez" width = "100px" src="user.png">
         <br>Maria Alexandra Ortiz
         <div class = "content">
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          Vice President
         </div>
 
       </div> 
@@ -56,7 +51,7 @@
         <img class = "prez" width = "100px" src="user.png">
         <br>Lilah El-Halabi
         <div class = "content">
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          Treasurer 
         </div> 
 
       </div> 
@@ -64,7 +59,7 @@
         <img class = "prez" width = "100px" src="user.png">
         <br>Miriam Harb
         <div class = "content">
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          secretary
         </div>
 
       </div> 
@@ -72,7 +67,7 @@
         <img class = "prez" width = "100px" src="user.png">
         <br>Nimra
         <div class = "content">
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+         PR Chair
         </div>
 
       </div> 
@@ -80,11 +75,23 @@
         <img class = "prez" width = "100px" src="user.png">
         <br>Jahina Hayes
         <div class = "content">
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          Webmaster 
         </div>
 
       </div>
   </div>
+  Future Events <br>
+
+  Insert calender<br>
+
+
+  Where To Find Us<br>
+
+  Instagram
+  Facebook
+  Email
+  
+
   </div>
 </body>
 
